# claude-platform

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml  recommended-prettierignore.txt
.claude/: REVIEW_WORKFLOW.md  claude-cli-invocations.allowlist  lint-claude-cli-invocations.py  lint-skill-content.py  settings.json
.claude/agents/: code-reviewer.md
.claude/skills/actions-usage-audit/: SKILL.md
.claude/skills/agent-loop/: SKILL.md  agent-loop-instructions.md.template  agent-loop.config.template  prompt.txt.template
.claude/skills/agent-loop/scripts/: agent-loop.sh
.claude/skills/aws-infra-migration/: SKILL.md
.claude/skills/backlog-refinement/: LEARNINGS.md.template  RUBRIC.md.template  SKILL.md
.claude/skills/backlog-refinement/scripts/: bail-report.py  candidates.py
.claude/skills/codex-review/: SKILL.md
.claude/skills/copilot-review/: SKILL.md
.claude/skills/deepgrill/: SKILL.md
.claude/skills/feature-dev/: SKILL.md
.claude/skills/grill/: SKILL.md
.claude/skills/issues/: SKILL.md
.claude/skills/issues/scripts/: link.py  ready.py
.claude/skills/phone-install/: SKILL.md
.claude/skills/pr-stats/: SKILL.md
.claude/skills/refactorpass/: SKILL.md
.claude/skills/review-accessibility/: SKILL.md
.claude/skills/review-accessibility/assets/: axe-scan.js
.claude/skills/reviewit/: SKILL.md
.claude/skills/task-packet/: SKILL.md
.github/: CODEOWNERS  copilot-instructions.md.template  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dco.yml  gemini-review.yml  notify-leak-scanner.yml  sync-from-upstream.yml.template
claude/: github-api-usage.md
docs/: getting-started.md  sync.md
scripts/: check-action-pin-drift.sh  create-signed-commit.py  install-skills.sh  sync-engine.py  sync-targets.yml  sync-targets.yml.example
tests/: conftest.py  review-accessibility-asset.test.js  test_agent_loop.py  test_create_signed_commit.py  test_ready.py  test_sync_engine.py
tests/fixtures/render-check/: .platform-config.yml
